fix button in cart on mobile

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -205,4 +205,7 @@
         width: 2.5rem;
         height: 2.5rem;
     }
+    .cart-total .button-text {
+        font-size: 16px;
+    }
 }
